--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A form generator for Vuetify",
   "main": "src/form-generator.vue",
   "scripts": {
- 	
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "mocha": "^4.0.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
