--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - iojs
-  - '7'
+  - "node"
+  - "iojs"
 deploy:
   provider: npm
   email: andreas.furster@hotmail.com
